# caith

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: guarded_roller.rs  raw_parser.rs
src/: caith.pest  cards.rs  error.rs  lib.rs  parser.rs  rollresult.rs
src/helpers/: cde.rs  mod.rs  ova.rs
src/rollresult/: diceresult.rs  repeatedrollresult.rs  rollhistory.rs  singlerollresult.rs
