[package]
name = "caith"
version = "4.0.0"
authors = ["Geobert Quach <geobert@protonmail.com>"]
edition = "2018"
description = "A dice roller library supporting many features"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games"]
repository = "https://github.com/Geobert/caith"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.1"

[dev-dependencies]
rand_core = "0.6.1"

[features]
default = []
ova = []
cde = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]